# ContentGen

./: README.md  package-lock.json  package.json
Desktop/projects/Fitapp-fixierun-full/: ANALYSE_COMPLETE_PROJETS.md  PLAN_UNIFICATION.md  backup-projects.sh  package-lock.json  package.json  turbo.json
Desktop/projects/Fitapp-fixierun-full/FitApp-FixieRun/: .env.example  .pre-commit-config.yaml  IMPLEMENTATION.md  README.md  create_structure.py  pyproject.toml  requirements-api.txt
Desktop/projects/Fitapp-fixierun-full/FitApp-FixieRun/.github/workflows/: python-package.yml
Desktop/projects/Fitapp-fixierun-full/FitApp-FixieRun/docs/: Makefile  conf.py  index.rst  requirements.txt
Desktop/projects/Fitapp-fixierun-full/FitApp-FixieRun/docs/modules/: index.rst
Desktop/projects/Fitapp-fixierun-full/FitApp-FixieRun/docs/modules/core/: rewards.rst
Downloads/domain-hunter-dashboard/: .gitignore  PROJET_COMPLETED.md  README.md  README_REAL_DATA.md  SYSTEM_OVERVIEW.md  advanced_scraper.py  analyse_    aiftw_be_20250607_102917.json  analyse_    devtehen_xyz_20250607_103006.json  analyse_    seobiz_be_20250607_102953.json  analyse_Fixie_run_20250607_102434.json  analyse_affinitylove_eu_20250607_102900.json  analyse_affinitylove_eu_20250607_103353.json  analyse_aiftw_be_20250607_103409.json  analyse_antonylambi_be puffs-store_com_20250607_103432.json  analyse_seobiz_be_20250607_103447.json  analyse_tech-marketing-blog_com_20250609_000941.json  analytics_report.html  analyzed_real_domains.db  app.js  demo.py  demo_complete.py  demo_real_data.py  demo_scraper.py  demo_scraping_results_20250609_000720.csv  detailed_analysis.csv  domain_analysis.db  domain_hunter.py  domain_scraper.py  domainehunter.html  index.html  install.sh  integrated_rapidapi_scraper.py  integrated_real_scraper.py  optimization_config.json  optimized_scraper.py  optimized_scraping_20250609_040703.csv  optimized_scraping_20250609_041422.csv  optimized_scraping_20250609_041911.csv  perplexity_optimizer.py  premium_opportunities_20250609_012041.csv  (+21 more)
Downloads/domain-hunter-dashboard/venv_py311/: pyvenv.cfg
public/: limiter.py
src/app/: actions.ts  layout.tsx  page.tsx
src/components/: social-content-generator.tsx
src/lib/: platform-handlers.ts  rate-limiter.ts  types.ts
(+992 files in other folders)
