[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixie-run"
version = "0.1.0"
description = "A toolkit for adapting cycling analytics for blockchain integration with zkEVM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fixie.Run Team", email = "dev@fixie.run"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
dependencies = [
    "jinja2>=3.0.0",
    "pillow>=9.0.0",
    "web3>=5.30.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
    "black>=22.1.0",
    "mypy>=0.900",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
api = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.7",
    "python-multipart>=0.0.6",
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=1.0.0",
]

[project.urls]
"Homepage" = "https://fixie.run"
"Bug Tracker" = "https://github.com/fixie-run/fixie-run/issues"
"Source" = "https://github.com/fixie-run/fixie-run"
"Documentation" = "https://fixie-run.readthedocs.io/"

[project.scripts]
fixie-run = "fixie_run.main:main"
fixie-run-api = "fixie_run.api.cli:main"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["fixie_run"]

[tool.setuptools.package-data]
"fixie_run.web" = ["templates/**/*", "templates/components/**/*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
